--- a/product-dev.yml
+++ b/product-dev.yml
@@ -4,5 +4,8 @@ spring:
     username: root
     password:
     url: jdbc:mysql://127.0.0.1:3306/bunny?characterEncoding=utf-8&userSSL=false
+  rabbitmq:
+    host: 192.168.99.100
+    port: 5672
   jpa:
     show-sql: true
