--- a/product-dev.yml
+++ b/product-dev.yml
@@ -1,17 +1,20 @@
 server:
   port: 8082
 spring:
+  application:
+    name: order
   datasource:
+    url: jdbc:mysql://127.0.0.1:3306/bunny?characterEncoding=utf-8&userSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password:
-    url: jdbc:mysql://127.0.0.1:3306/bunny?characterEncoding=utf-8&userSSL=false
+  jpa:
+    show-sql: true
   rabbitmq:
     host: 192.168.99.100
     port: 5672
-  jpa:
-    show-sql: true
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+env: dev
