--- a/product-dev.yml
+++ b/product-dev.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: order
+  redis:
+    host: 192.168.99.100
+    port: 6379
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/bunny?characterEncoding=utf-8&userSSL=false
     driver-class-name: com.mysql.jdbc.Driver
