--- a/order-test.yml
+++ b/order-test.yml
@@ -13,6 +13,9 @@ spring:
   rabbitmq:
     host: 192.168.99.100
     port: 5672
+  redis:
+    host: 192.168.99.100
+    port: 6379
 eureka:
   client:
     service-url:
