--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,6 +10,9 @@ spring:
     show-sql: true
 server:
   port: 8081
+redis:
+    host: 192.168.99.100
+    port: 6379
 eureka:
   client:
     service-url:
