--- a/product-dev.yml
+++ b/product-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8082
 spring:
   application:
-    name: order
+    name: product
   redis:
     host: 192.168.99.100
     port: 6379
